# OS

./: CMakeLists.txt  README.md
kp/: CMakeLists.txt  main.cpp  КП.docx
kp/include/: BuddyAllocator.h  N2Allocator.h
kp/src/: BuddyAllocator.cpp  N2Allocator.cpp
lab1/: ЛР1.docx
lab2/: CMakeLists.txt  main.cpp  report_lab2.odt
lab2/include/: parent.hpp  utils.hpp
lab2/src/: child1.cpp  child2.cpp  parent.cpp  utils.cpp
lab3/: CMakeLists.txt  main.cpp  ЛР3.docx
lab3/include/: Average.h  lab3.h  utils.h
lab3/src/: Average.cpp  lab3.cpp  utils.cpp
lab4/: report4.odt
lab4/include/: parent.h
lab4/src/: child2.cpp  utils.cpp
lab5/: CMakeLists.txt  main.cpp  ЛР5.docx
lab5/include/: mathematical-analysis.hpp
lab5/src/: mathematical-analysis1.cpp  mathematical-analysis2.cpp
lab_6-8/: lab_6-8.docx
lab_6-8/src/: calculation  control  control.cpp  makefile
tests/: CMakeLists.txt  lab2_test.cpp  lab3_test.cpp  lab4_test.cpp  lab5_test.cpp
